# songbird

./: .env.example  .gitignore  LICENSE  PRIVACY.md  README.md  TERMS.md  config.toml  pyproject.toml
database/chat/: 01.schema.sql  02.types.sql  03.message.sql  04.user_info.sql  05.guild_message.sql
database/feedback/: 01.schema.sql  02.thread.sql
database/management/: 01.schema.sql  02.user_ban.sql  03.guild_ban.sql
prompts/: default.xml
src/songbird/: __main__.py  bot.py  config.py
src/songbird/cogs/: __init__.py  base.py  bot.py  llm.py  management.py  tools.py
src/songbird/commands/llm/: guild_chat.py  private_chat.py  quickchat.py  summary.py
src/songbird/commands/tools/: fix.py  translate.py  wolfram.py
src/songbird/listeners/: __init__.py  chat.py  common.py  link_fixer.py  management.py
src/songbird/models/: _base_db_model.py  conversation.py  exception.py  help.py  llm.py
src/songbird/models/chat/: base.py  exceptions.py  guild_message.py  message.py  user_info.py
src/songbird/models/feedback/: base.py  exceptions.py  thread.py
src/songbird/models/management/: base.py  exceptions.py  guild_ban.py  user_ban.py
src/songbird/repositories/chat/: guild_message.py  message.py  user_info.py
src/songbird/repositories/feedback/: thread.py
src/songbird/repositories/management/: guild_ban.py  user_ban.py
src/songbird/services/: container.py  feedback.py  guild_conversation.py  link_fixer.py  llm.py  management.py  private_conversation.py  translation.py  urban_dictionary.py.disabled  wolfram.py
src/songbird/ui/: custom_components.py
src/songbird/ui/modals/: feedback.py  file.py  info.py  translate.py
src/songbird/ui/views/: about.py  help.py  link_fixer.py  manage.py  translate.py
src/songbird/utils/: constants.py  discord.py  emojis.py  env.py  id_factory.py  logging.py  permissions.py  prompts.py  text.py
