[project]
name = "songbird"
version = "3.0.0"
description = "A Discord bot that embodies the persona of Song So Mi (Songbird) from Cyberpunk 2077, featuring AI-powered conversations, translation services, and computational knowledge queries."
requires-python = ">=3.13"
dependencies = [
    "py-cord>=2.8.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "pycountry>=26.2.16",
    "pydantic-settings[toml]>=2.13.1",
    "structlog>=25.5.0",
    "httpx>=0.28.1",
    "uuid7>=0.1.0",
    "google-genai>=2.7.0",
    "tldextract>=5.3.1",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "googletrans>=4.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "mypy>=2.1.0",
    "ruff>=0.15.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/songbird"]

[tool.ruff]
target-version = "py313"
line-length = 132
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["songbird"]

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

# [[tool.mypy.overrides]]
# module = ["discord.*", "litellm.*"]
# ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
